force-app/src/objects/OrderApi__Receipt_Line__c.object
<CustomObject>
    <description>Receipt Lines apply cash related to either refunds or payments to Invoices or Items.</description>
    <fields>
        <fullName>OrderApi__Activation_Date__c</fullName>
        <description>** System Calculated Override Conditionally Required ** The date the Subscription will be activated is calculated based on conditions set on the related Subscription Plan and can be manually over-ridden if &quot;Auto Calculate Activation Date&quot; is unchecked.</description>
        <inlineHelpText>** System Calculated Override Conditionally Required ** The date the Subscription will be activated is calculated based on conditions set on the related Subscription Plan and can be manually over-ridden if &quot;Auto Calculate Activation Date&quot; is unchecked.</inlineHelpText>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Auto_Calculate_Activation_Date__c</fullName>
        <defaultValue>true</defaultValue>
        <description>** System Calculated Override ** Valid if the Receipt Line is related to a &quot;Subscription&quot; Item. When checked, the system will automatically calculate the &quot;Activation Date&quot; based on conditions set on the selected &quot;Subscription Plan&quot;. Defaults checked.</description>
        <inlineHelpText>** System Calculated Override ** Valid if the Receipt Line is related to a &quot;Subscription&quot; Item. When checked, the system will automatically calculate the &quot;Activation Date&quot; based on conditions set on the selected &quot;Subscription Plan&quot;. Defaults checked.</inlineHelpText>
        <label>Auto Calculate Activation Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to the related Business Group.</description>
        <inlineHelpText>**System Calculated/Override** Link to the related Business Group.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipName>Receipt_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Calculate_Shipping_Details__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Default checked. Copies the shipping information from the receipt.</description>
        <inlineHelpText>Default checked. Copies the shipping information from the receipt.</inlineHelpText>
        <label>Calculate Shipping Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is populated to show the related contact.</description>
        <inlineHelpText>This field is populated to show the related contact.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Receipt Lines</relationshipLabel>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__EPayment_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated** Link to related ePayment Line.</description>
        <inlineHelpText>**System Calculated** Link to related ePayment Line.</inlineHelpText>
        <label>EPayment Line</label>
        <referenceTo>OrderApi__EPayment_Line__c</referenceTo>
        <relationshipLabel>Receipt Lines</relationshipLabel>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__End_Date__c</fullName>
        <description>** System Calculated Override Conditionally Required ** The date the Subscription will be ended is calculated based on conditions set on the related Subscription Plan and Activation Date.</description>
        <inlineHelpText>** System Calculated Override Conditionally Required ** The date the Subscription will be ended is calculated based on conditions set on the related Subscription Plan and Activation Date.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Foreign_Key__c</fullName>
        <description>System Field, For Coding purposes only. Used to efficiently insert receipt lines and its related child receipt lines in our system.</description>
        <externalId>true</externalId>
        <inlineHelpText>System Field, For Coding purposes only. Used to efficiently insert receipt lines and its related child receipt lines in our system.</inlineHelpText>
        <label>SYSTEM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Required/Override** Link to the related GL Account.</description>
        <inlineHelpText>**System Calculated/Required/Override** Link to the related GL Account.</inlineHelpText>
        <label>GL Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice_Balance_Due__c</fullName>
        <description>**System Calculated** The balance due for the linked Invoice (if applicable).</description>
        <formula>OrderApi__Invoice__r.OrderApi__Balance_Due__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**System Calculated** The balance due for the linked Invoice (if applicable).</inlineHelpText>
        <label>Invoice Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice_Customer_Link__c</fullName>
        <description>**System Calculated** The customer for the linked Invoice (if applicable).</description>
        <formula>OrderApi__Invoice__r.OrderApi__Customer_Link__c</formula>
        <inlineHelpText>**System Calculated** The customer for the linked Invoice (if applicable).</inlineHelpText>
        <label>Invoice Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice_Due_Date__c</fullName>
        <description>**System Calculated** The due date for the linked Invoice (if applicable).</description>
        <formula>OrderApi__Invoice__r.OrderApi__Due_Date__c</formula>
        <inlineHelpText>**System Calculated** The due date for the linked Invoice (if applicable).</inlineHelpText>
        <label>Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates the receipt line to the invoice line.</description>
        <inlineHelpText>Relates the receipt line to the invoice line.</inlineHelpText>
        <label>Invoice Line</label>
        <referenceTo>OrderApi__Invoice_Line__c</referenceTo>
        <relationshipLabel>Receipt Lines</relationshipLabel>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Invoice that the customer is paying.</description>
        <inlineHelpText>Link to related Invoice that the customer is paying.</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>OrderApi__Invoice__c</referenceTo>
        <relationshipLabel>Payments &amp; Refunds</relationshipLabel>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Refund__c</fullName>
        <description>**System Calculated** Checked when the parent Receipt is a &quot;Refund&quot;</description>
        <formula>ISPICKVAL(OrderApi__Receipt__r.OrderApi__Type__c,&quot;Refund&quot;)</formula>
        <inlineHelpText>**System Calculated** Checked when the parent Receipt is a &quot;Refund&quot;</inlineHelpText>
        <label>Is Refund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, related Receipt Line is considered as &quot;Subscription Renewal&quot;.</description>
        <inlineHelpText>When checked, related Receipt Line is considered as &quot;Subscription Renewal&quot;.</inlineHelpText>
        <label>Is Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Shipping_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines the Receipt Line that is being used for shipping.</description>
        <inlineHelpText>Defines the Receipt Line that is being used for shipping.</inlineHelpText>
        <label>Is Shipping Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines the Receipt Line that is being used for tax.</description>
        <inlineHelpText>Defines the Receipt Line that is being used for tax.</inlineHelpText>
        <label>Is Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated / Override ** Link to the related Item Class.</description>
        <inlineHelpText>** System Calculated / Override ** Link to the related Item Class.</inlineHelpText>
        <label>Item Class</label>
        <referenceTo>OrderApi__Item_Class__c</referenceTo>
        <relationshipLabel>Receipt Lines</relationshipLabel>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item_Name__c</fullName>
        <description>The name of the Item as you would like it to display when published to customers. Defaults to the same value of the &quot;Item Display Name&quot; field.</description>
        <inlineHelpText>The name of the Item as you would like it to display when published to customers. Defaults to the same value of the &quot;Item Display Name&quot; field.</inlineHelpText>
        <label>Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**Required** Link to related Item.</description>
        <inlineHelpText>**Required** Link to related Item.</inlineHelpText>
        <label>Item</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Line_Description__c</fullName>
        <description>**System Calculated/Override** The line description by default populates with general information from either the linked Item or the linked Invoice.</description>
        <inlineHelpText>**System Calculated/Override** The line description by default populates with general information from either the linked Item or the linked Invoice.</inlineHelpText>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__List_Price__c</fullName>
        <description>**System Calculated** The value of the &quot;Price&quot; field for the related Item.</description>
        <formula>OrderApi__Item__r.OrderApi__Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**System Calculated** The value of the &quot;Price&quot; field for the related Item.</inlineHelpText>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Parent_Foreign_Key__c</fullName>
        <description>System Field, For Coding purposes only. Used to efficiently insert receipt lines and its related child receipt lines in our system.</description>
        <externalId>true</externalId>
        <inlineHelpText>System Field, For Coding purposes only. Used to efficiently insert receipt lines and its related child receipt lines in our system.</inlineHelpText>
        <label>SYSTEM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Price_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the system will derive the Sale Price from the most appropriate Price Rule. Default checked.</description>
        <inlineHelpText>When checked, the system will derive the Sale Price from the most appropriate Price Rule. Default checked.</inlineHelpText>
        <label>Price Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Price_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to related Price Rule applied for the related Item.</description>
        <inlineHelpText>**System Calculated/Override** Link to related Price Rule applied for the related Item.</inlineHelpText>
        <label>Price Rule</label>
        <referenceTo>OrderApi__Price_Rule__c</referenceTo>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>**Required** Quantity of Items. Default 1.</description>
        <inlineHelpText>**Required** Quantity of Items. Default 1.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Receipt_Line_R__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates the functional Receipt Line to the reporting Receipt Line when Fonteva&apos;s multi-currency is enabled.</description>
        <inlineHelpText>Relates the functional Receipt Line to the reporting Receipt Line when Fonteva&apos;s multi-currency is enabled.</inlineHelpText>
        <label>Receipt Line (R)</label>
        <referenceTo>OrderApi__Receipt_Line_R__c</referenceTo>
        <relationshipLabel>Receipt Lines</relationshipLabel>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Receipt_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related parent Receipt Line.</description>
        <inlineHelpText>Link to related parent Receipt Line.</inlineHelpText>
        <label>Parent Receipt Line</label>
        <referenceTo>OrderApi__Receipt_Line__c</referenceTo>
        <relationshipLabel>Packaged Items</relationshipLabel>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Receipt__c</fullName>
        <description>**Required** All Receipt details require a parent receipt that summarizes all receipt lines.</description>
        <inlineHelpText>**Required** All Receipt details require a parent receipt that summarizes all receipt lines.</inlineHelpText>
        <label>Receipt</label>
        <referenceTo>OrderApi__Receipt__c</referenceTo>
        <relationshipName>Receipt_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>OrderApi__Sale_Price__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>**System Calculated/Override** The Sale Price (per unit) for the related Item. Default 0.00.</description>
        <inlineHelpText>**System Calculated/Override** The Sale Price (per unit) for the related Item. Default 0.00.</inlineHelpText>
        <label>Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated** Link to related Sales Order Line.</description>
        <inlineHelpText>**System Calculated** Link to related Sales Order Line.</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Receipt Lines</relationshipLabel>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated** Link to related Sales Order.</description>
        <inlineHelpText>**System Calculated** Link to related Sales Order.</inlineHelpText>
        <label>Sales Order</label>
        <referenceTo>OrderApi__Sales_Order__c</referenceTo>
        <relationshipLabel>Receipt Lines</relationshipLabel>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_City__c</fullName>
        <description>Optional shipping city for the item&apos;s ordered on the receipt line. If left blank, the value of this field will be updated with the value of the parent receipt&apos;s &quot;Shipping City&quot; field.</description>
        <inlineHelpText>Optional shipping city for the item&apos;s ordered on the receipt line. If left blank, the value of this field will be updated with the value of the parent receipt&apos;s &quot;Shipping City&quot; field.</inlineHelpText>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Contact__c</fullName>
        <description>Optional shipping contact for the item&apos;s ordered on the receipt line. If left blank, the value of this field will be updated with the value of the parent receipt&apos;s &quot;Shipping Contact&quot; field.</description>
        <inlineHelpText>Optional shipping contact for the item&apos;s ordered on the receipt line. If left blank, the value of this field will be updated with the value of the parent receipt&apos;s &quot;Shipping Contact&quot; field.</inlineHelpText>
        <label>Shipping Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Country__c</fullName>
        <description>Optional shipping country for the item&apos;s ordered on the receipt line. If left blank, the value of this field will be updated with the value of the parent receipt&apos;s &quot;Shipping Country&quot; field.</description>
        <inlineHelpText>Optional shipping country for the item&apos;s ordered on the receipt line. If left blank, the value of this field will be updated with the value of the parent receipt&apos;s &quot;Shipping Country&quot; field.</inlineHelpText>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Postal_Code__c</fullName>
        <description>Optional shipping postal code for the item&apos;s ordered on the receipt line. If left blank, the value of this field will be updated with the value of the parent receipt&apos;s &quot;Shipping Postal Code&quot; field.</description>
        <inlineHelpText>Optional shipping postal code for the item&apos;s ordered on the receipt line. If left blank, the value of this field will be updated with the value of the parent receipt&apos;s &quot;Shipping Postal Code&quot; field.</inlineHelpText>
        <label>Shipping Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_State__c</fullName>
        <description>Optional shipping state for the item&apos;s ordered on the receipt line. If left blank, the value of this field will be updated with the value of the parent receipt&apos;s &quot;Shipping State&quot; field.</description>
        <inlineHelpText>Optional shipping state for the item&apos;s ordered on the receipt line. If left blank, the value of this field will be updated with the value of the parent receipt&apos;s &quot;Shipping State&quot; field.</inlineHelpText>
        <label>Shipping State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_Street__c</fullName>
        <description>Optional shipping street for the item&apos;s ordered on the receipt line. If left blank, the value of this field will be updated with the value of the parent receipt&apos;s &quot;Shipping Street&quot; field.</description>
        <inlineHelpText>Optional shipping street for the item&apos;s ordered on the receipt line. If left blank, the value of this field will be updated with the value of the parent receipt&apos;s &quot;Shipping Street&quot; field.</inlineHelpText>
        <label>Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Conditionally Required ** Link to the related plan that controls Activation and Expiration dates related to any Subscription Item. Required when the Receipt Line is linked to a Item that is the child of a &quot;Subscription&quot; Item Class.</description>
        <inlineHelpText>** Conditionally Required ** Link to the related plan that controls Activation and Expiration dates related to any Subscription Item. Required when the Receipt Line is linked to a Item that is the child of a &quot;Subscription&quot; Item Class.</inlineHelpText>
        <label>Subscription Plan</label>
        <referenceTo>OrderApi__Subscription_Plan__c</referenceTo>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Subscription that is being upgraded or renewed.</description>
        <inlineHelpText>Link to the Subscription that is being upgraded or renewed.</inlineHelpText>
        <label>Subscription (Upgrade/Renew)</label>
        <referenceTo>OrderApi__Subscription__c</referenceTo>
        <relationshipName>Receipt_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subtotal__c</fullName>
        <description>**System Calculated** Sale Price * Quantity</description>
        <formula>OrderApi__Sale_Price__c * OrderApi__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**System Calculated** Sale Price * Quantity</inlineHelpText>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Tax_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to override any tax calculations by the system.</description>
        <inlineHelpText>This field is used to override any tax calculations by the system.</inlineHelpText>
        <label>Tax Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Tax_Percent__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Combined with the Parent Receipt Line&apos;s Sales Price, this field is used to calculate the tax amount for the related item.</description>
        <inlineHelpText>Combined with the Parent Receipt Line&apos;s Sales Price, this field is used to calculate the tax amount for the related item.</inlineHelpText>
        <label>Tax Percent</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OrderApi__Total__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>**Required** Total amount for the Receipt Line. Default is 0.00.</description>
        <inlineHelpText>**Required** Total amount for the Receipt Line. Default is 0.00.</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Receipt Line</label>
    <listViews>
        <fullName>OrderApi__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Receipt Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipt Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>